--- a/app/views/holidays/index.html.erb
+++ b/app/views/holidays/index.html.erb
@@ -1,10 +1,87 @@
-<h1>Holiday List</h1>
-<ul>
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
+<html>
+<head>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+<title>LJMU Holiday Request System</title>
+</head>
+
+<body>
+<div id="container">
+
+  <div id="header"><img src="images/ljmuheader.png" width="968" height="125" alt="LJMUHeader" title="LJMU Holiday Request System header"></div>
+  
+  <div class="navigation">
+	<ul>
+	<li><a title= "Home page of LJMU holiday requests" href="index.html" accesskey="i">Home</a></li>
+	<li><a title = "List of holiday requests" href="requests.html" accesskey="r">Requests</a></li>
+	<li><a title  = "Add a new holiday request to the system" href="new.html" accesskey="n">Add Request</a></li>
+	<li><a title = "Edit a holiday request" href="edit.html" accesskey="e">Edit Request</a></li>
+	<li><a title = "Show an individual request of the system" href="show.html" accesskey="s">Show Request</a></li>
+	</ul>
+  </div>
+  
+  <div id="leftcolumn"><img src="images/ljmu.png" width="165" height="165" alt="LJMULogo" title="LJMU Logo">
+  <div class="contactinfo"><h1>LJMU Contact Information</h1>
+	<p>Telephone Number: 0151 231 2121</p>
+	<p>Other contact information is available on the <a title ="LJMU Contact Information" href="http://www.ljmu.ac.uk/help.htm">LJMU</a> website</p></div>
+    </div>
+<div id="maincolumn"><br><br>
+  
+  <h1>Holiday List</h1>
+<table border = "1" cellpadding = "5" rules="groups" frame="box" class="center">
+
+<thead>
+  <tr> 
+  <th>User ID</th> <th>Staff Name</th>
+  </tr>
+  </thead>
+  
     <% @holiday.each do |holiday| %>
-    <li> <%= link_to holiday.name, holiday %> </li>
+    <tbody>
+    <tr>
+    
+    <td><%= link_to holiday.userid, holiday %></td> <td><%= holiday.name %></td>
     <% end %>
-</ul>
+    
+    </table>
+    
+
 
 <p>
   <%= link_to "Create Holiday", new_holiday_path %>
 </p>
+
+
+  </div>
+
+
+<div id="rightcolumn"> 
+  
+  <div class="snimages">
+  <a href="http://www.ljmu.ac.uk/staff"><img src="images/LJMU1.png" width="55" height="55" alt="LJMUSocialNetwork" title="LJMU Staff"></a>
+    <a href="http://www.youtube.com/LJMUTV"><img src="images/youtube.png" width="55" height="55" alt="YoutubeSocialNetwork" title="LJMU YouTube"></a>
+    <a href="http://www.facebook.com/liverpooljohnmooresuniversity"><img src="images/facebook.png" width="55" height="55" alt="FacebookSocialNetwork" title="LJMU Facebook"></a>
+    <a href="http://twitter.com/#!/ljmu"><img src="images/twitter.png" width="55" height="55" alt="TwitterSocialNetwork" title="LJMU Twitter"></a>
+	</div>
+    
+  <div class="socialnetwork">
+  <h1>Social Networking</h1>
+  <p>You can find LJMU on the above social networking websites or return to the LJMU Website.</p></div>
+  </div>
+  
+  <div id="footer">
+	
+<p>Copyright LJMU. All Rights Reserved.
+
+    <a href="http://validator.w3.org/check?uri=referer"><img
+      src="http://www.w3.org/Icons/valid-html401" alt="Valid HTML 4.01 Transitional" title="HTML 4.01 Transitional Validation Proof" height="31" width="88"></a>
+      
+      <a href="http://jigsaw.w3.org/css-validator/check/referer">
+    <img style="border:0;width:88px;height:31px"
+        src="http://jigsaw.w3.org/css-validator/images/vcss-blue"
+        alt="Valid CSS!" title="CSS 2.1 Validation Proof">
+</a>
+  </p>
+
+  	</div>
+  	</div>
