--- a/app/views/holidays/index.html.erb
+++ b/app/views/holidays/index.html.erb
@@ -20,7 +20,7 @@
 	</ul>
   </div>
   
-  <div id="leftcolumn"><img src="images/ljmu.png" width="165" height="165" alt="LJMULogo" title="LJMU Logo">
+  <div id="leftcolumn"><img src="images/LJMU.png" width="165" height="165" alt="LJMULogo" title="LJMU Logo">
   <div class="contactinfo"><h1>LJMU Contact Information</h1>
 	<p>Telephone Number: 0151 231 2121</p>
 	<p>Other contact information is available on the <a title ="LJMU Contact Information" href="http://www.ljmu.ac.uk/help.htm">LJMU</a> website</p></div>
