slight changes made

--- a/app/views/holidays/_form.html.erb
+++ b/app/views/holidays/_form.html.erb
@@ -29,7 +29,7 @@
 
 <p>
   <%= h.label :name, "Staff Name" %><br />
-  <%= h.text_field :name, :value => current_user.username, :disabled => true %>
+  <%= h.text_field :name, :value => current_user.username %>
 </p>
 
 <p>
