--- a/app/views/holidays/index.html.erb
+++ b/app/views/holidays/index.html.erb
@@ -17,13 +17,14 @@
 	<p>Telephone Number: 0151 231 2121</p>
 	<p>Other contact information is available on the <a title ="LJMU Contact Information" href="http://www.ljmu.ac.uk/help.htm">LJMU</a> website</p></div>
     </div>
-<div id="maincolumn"><br><br>
+<div id="maincolumn"><br>
 
 <% if logged_in? %>
     <h1>Welcome <%=h current_user.username %></h1>
    <% end %>
   
   <h2>Holiday List</h2>
+  <p>Below is a list of the current holiday requests. To view a request please click on the User ID link provided.</p>
 <table border = "1" cellpadding = "5" rules="groups" frame="box" class="center">
 
 <thead>
