--- a/app/views/holidays/show.html.erb
+++ b/app/views/holidays/show.html.erb
@@ -17,18 +17,21 @@
 	<p>Other contact information is available on the <a title ="LJMU Contact Information" href="http://www.ljmu.ac.uk/help.htm">LJMU</a> website</p></div>
     </div>
  
-<div id="maincolumn"><br><br>
+<div id="maincolumn"><br>
 
 <h1><%=h @holiday.name %>'s holiday request</h1>
+
+<p>The holiday request details are listed below</p>
+<div class = "form">
 <p>User ID:<%=h @holiday.userid %></p>
 <p>Amount of days:<%=h @holiday.amountofdays %></p>
 <p>Start Date:<%=h @holiday.startdate %></p>
 <p>End Date:<%=h @holiday.enddate %></p>
-
 <% if current_user.id == @holiday.user.id %>
-<p><%= link_to "Edit Holiday", edit_holiday_path %> | <%= link_to "Delete Holiday", @holiday,:confirm => "Confirming holiday request deletion?", :method => :delete %> </p><br>
+<p><%= link_to "Edit Holiday", edit_holiday_path %> | <%= link_to "Delete Holiday", @holiday,:confirm => "Confirming holiday request deletion?", :method => :delete %> </p>
 <% end %>
-
+</div>
+<br>
 <p><%= link_to "Return to Holiday Index", holidays_path %></p>
 </div>
 
