--- a/app/views/holidays/_form.html.erb
+++ b/app/views/holidays/_form.html.erb
@@ -43,6 +43,12 @@
   <%= h.label :enddate, "End Date" %><br />
   <%= h.text_field :enddate %>
 </p>
+<% if current_user.admin == true %>
+<p>
+  <%= h.label :approved, "Approved?" %><br />
+  <%= h.check_box :approved %>
+</p>
+<% end %>
 
 <p>
   <%= h.submit "Save Holiday" %> | <%= link_to "Return to holidays", @holiday %>
