--- a/app/views/holidays/show.html.erb
+++ b/app/views/holidays/show.html.erb
@@ -29,8 +29,9 @@
 <p>Start Date:<%=h @holiday.startdate %></p>
 <p>End Date:<%=h @holiday.enddate %></p>
 <p>Approved:<%=h @holiday.approved %></p>
+
 <% if current_user.id == @holiday.user.id %>
-<p><%= link_to "Edit Holiday", edit_holiday_path %> | <%= link_to "Delete Holiday", @holiday,:confirm => "Confirming holiday request deletion?", :method => :delete %> </p>
+<p><% if @holiday.approved != true %> <%= link_to "Edit Holiday", edit_holiday_path %> | <% end %> <%= link_to "Delete Holiday", @holiday,:confirm => "Confirming holiday request deletion?", :method => :delete %> </p>
 <% end %>
 
 </div>
