functionality virtually completed

--- a/app/views/holidays/show.html.erb
+++ b/app/views/holidays/show.html.erb
@@ -30,8 +30,8 @@
 <p>End Date:<%=h @holiday.enddate %></p>
 <p>Approved:<%=h @holiday.approved %></p>
 
-<% if current_user.id == @holiday.user.id %>
-<p><% if @holiday.approved != true %> <%= link_to "Edit Holiday", edit_holiday_path %> | <% end %> <%= link_to "Delete Holiday", @holiday,:confirm => "Confirming holiday request deletion?", :method => :delete %> </p>
+<% if current_user.id == @holiday.user.id || current_user.admin == true %>
+<p><% if @holiday.approved != true %>  <%= link_to "Edit Holiday", edit_holiday_path %> | <% end %>  <%= link_to "Delete Holiday", @holiday,:confirm => "Confirming holiday request deletion?", :method => :delete %> </p>
 <% end %>
 
 </div>
