started atom builder

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,6 +1,7 @@
 <html>
 <head>
 <%= stylesheet_link_tag 'mystyles' %>
+<%= auto_discovery_link_tag :atom, formatted_holidays_path(:atom) %>
 </head>
 <body>
 
