image upload successful for adding record but not editing

--- a/app/views/holidays/index.html.erb
+++ b/app/views/holidays/index.html.erb
@@ -43,7 +43,13 @@
     
     </table>
     <br>
-    <%= will_paginate @holiday %>
+    
+	
+
+
+<%= will_paginate @holiday, :remote => "true" %>
+
+	
 
 
 <p>
