--- a/app/views/holidays/_form.html.erb
+++ b/app/views/holidays/_form.html.erb
@@ -22,7 +22,8 @@
 <p>Please fill in all fields to complete your request</p>
 
 <div class="form">
-<% form_for @holiday do |h| %>
+
+<% form_for @holiday, :html => { :multipart => true } do |h| %>
 
 <p>
   <%= h.label :amountofdays, "Amount of Days" %><br />
@@ -38,12 +39,20 @@
   <%= h.label :enddate, "End Date" %><br />
   <%= h.text_field :enddate %>
 </p>
+<p>
+  
+  <%= h.file_field :photo %>
+  
+</p>
+
 <% if current_user.admin == true %>
 <p>
   <%= h.label :approved, "Approved?" %><br />
   <%= h.check_box :approved %>
 </p>
 <% end %>
+
+
 
 <p>
   <%= h.submit "Save Holiday" %> | <%= link_to "Return to holidays", @holiday %>
