--- a/app/views/holidays/show.html.erb
+++ b/app/views/holidays/show.html.erb
@@ -29,6 +29,8 @@
 <p>Start Date: <%=h @holiday.startdate %></p>
 <p>End Date: <%=h @holiday.enddate %></p>
 <p>Approved: <%=h @holiday.approved %></p>
+<p>Image: <%= image_tag @holiday.photo.url(:small) %></p>
+
 
 <% if current_user.id == @holiday.user.id || current_user.admin == true %>
 <p><% if @holiday.approved != true %>  <%= link_to "Edit Holiday", edit_holiday_path %> | <% end %>  <%= link_to "Delete Holiday", @holiday,:confirm => "Confirming holiday request deletion?", :method => :delete %> </p>
