--- a/app/views/holidays/index.html.erb
+++ b/app/views/holidays/index.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
 <html>
 <%= javascript_include_tag :defaults %>
-<%= javascript_tag(make_links_ajax()) %>
+<%= javascript_tag(links_ajax()) %>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <title>LJMU Holiday Request System</title>
